# NIST-SYCL-Fastest-Randomness-Checking

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: nist_longest_run_test_vector.txt
docs/: benchmark.js  index.html  nist_algo.js  style.css  test.css  test.html  test.js
include/: nist_tests.h
src/: generate_sequence.cpp  io_utils.cpp  main.cpp  main_seq.cpp  math_utils.cpp  sequential.cpp  sycl_parallel.cpp  test_validation.cpp
website/: index.html  script.js  test.js
